# tpi-k3s-ansible

./: .ansible-lint  .buildinfo  .gitignore  .gitleaks.toml  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PLAN.md  README.md  ansible.cfg  explanations.html  genindex.html  hosts.yml  how-to.html  index.html  justfile  objects.inv  oidc-migration-plan.md  pb_ALL.yml  pb_add_nodes.yml  pb_all.yml  pb_decommission.yml  pyproject.toml  reference.html  renovate.json  search.html  searchindex.js  security-review.md  tutorials.html
.claude/: settings.json  settings.local.json  statusline-command.sh
.devcontainer/: Dockerfile  claude-sandbox.conf  devcontainer.json  initializeCommand  initializeCommand.sh  postCreate.sh  postCreateCommand  postStart.sh
.doctrees/: environment.pickle  explanations.doctree  how-to.doctree  index.doctree  reference.doctree  tutorials.doctree
_sources/: explanations.md.txt  how-to.md.txt  index.md.txt  reference.md.txt  tutorials.md.txt
_static/: architecture.html  custom.css
argo-cd/: README.md  argo-git-repository.yaml  argo-project.yaml  argocd-cm.yaml  argocd-minecraft.yaml  ingress.yaml
docs/: bootstrap.md  cloudflare2.md  conf.py  details.md  explanations.md  how-to.md  index.md  notes.md  reference.md  tutorials.md
explanations/: ansible-roles.html  architecture.html  authentication.html  claude-code-capability.html  decisions.html  gitops-flow.html  kubernetes-services.html  network-policies.html  networking.html  open-brain-clients.html  security-hardening.html  security.html
gbrain-image/: Dockerfile
group_vars/: all.yml
how-to/: accessing-services.html  add-remove-services.html  alternative-storage.html  backup-restore.html  bootstrap-cluster.html  claude-ai-mcp.html  claude-code-debugging-example.html  claude-code.html  cloudflare-ssh-tunnel.html  cloudflare-tunnel.html  cloudflare-web-tunnel.html  connect-thoth-mcp.html  fork-this-repo.html  llamacpp-models.html  manage-sealed-secrets.html  monitoring.html  nas-setup.html  node-operations.html  oauth-setup.html  open-brain.html  reflash-rebuild.html  rkllama-models.html  thoth.html  upgrade-k3s.html  (+1 more)
open-brain-cli/: pyproject.toml  server.py
scripts/: check  (+21 more)
(+404 files in other folders)
