[project]
name = "k3s-cluster-commissioning-docs"
version = "0.0.0"
description = "Documentation for K3s Cluster Commissioning with Ansible"
requires-python = ">=3.12"
# these are used by ansible to do cluster deployments
dependencies = [
    "ansible",
    "argcomplete",
    "ansible-lint",
    "jmespath",
    "kubernetes",
    "huggingface-hub",
]

[tool.setuptools]
packages = []

[dependency-groups]
# these are used by just and CI to build the documentation
dev = [
    "myst-parser",
    "pre-commit",
    "pydata-sphinx-theme>=0.12",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxcontrib-mermaid",
]
